# uamocf

./: .gitignore  NSGAII.ipynb  README.md  beyesian.ipynb  data_gen.ipynb  demo_state.pkl  generate_demo_state.py  hello.py  main.bbl  main.tex  nd_mmo.ipynb  pyproject.toml  refs.bib  requirements.txt  test_torch_pymoo.py  utils.py
core/: cf_problem.py  data.py  models.py  optimization.py  training.py
design_report/: Architecture.aux  Architecture.fdb_latexmk  Architecture.fls  Architecture.out  Architecture.tex  Architecture.toc  UX.aux  UX.fdb_latexmk  UX.fls  UX.out  UX.tex
examples/: demo_2d_experiment.py  demo_minist.ipynb  demo_minist2.ipynb  demo_minist_vae.ipynb  demo_mnist.ipynb  demo_moon.ipynb  demo_multiclass.ipynb  demo_notebook.ipynb  train_minist_vae.ipynb
uamocf/: __init__.py  cf_problem.py  data.py  models.py  optimization.py  pipeline.py  training.py  uncertainty.py  visualization.py
vis_tools/: __init__.py  app.py  cf_problem.py  data.py  models.py  pipeline.py  plotting.py  state.py  training.py  uncertainty.py
