[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.2.0",
    "plotly>=6.5.0",
    "pymc>=5.26.1",
    "pymoo>=0.6.1.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "skorch>=1.3.0",
    "torch>=2.2.0",
    "tqdm>=4.67.1",
]
